# wallet-budgetbakers-mcp

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  server.py
.github/workflows/: deploy.yml
