[project]
name = "wallet-bb-mcp"
version = "0.1.0"
description = "MCP server for BudgetBakers Wallet — read-only access to financial data"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
